--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -15,55 +15,59 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
             android:scaleType="centerCrop"
             android:src="@drawable/background"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/ic_settings"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImageView"
+            android:id="@+id/profile_image"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_marginTop="56dp"
             app:civ_border_color="#C8C8C8"
             app:civ_border_width="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.181"
-            tools:src="@tools:sample/avatars" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Erlantz Ayo"
             android:textColor="#3399FF"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
-            android:text="erlantzayo@gmail.com"
             android:textColor="#828282"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
 
         <LinearLayout
@@ -71,10 +75,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10">
+            app:layout_constraintTop_toBottomOf="@+id/user_email">
 
 
             <LinearLayout
@@ -87,11 +93,12 @@
                 tools:layout_editor_absoluteY="475dp">
 
                 <TextView
+                    android:id="@+id/user_followers"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="24"
+                    android:text="0"
                     android:textColor="#33E1FF"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     tools:layout_editor_absoluteX="64dp"
                     tools:layout_editor_absoluteY="374dp" />
@@ -101,7 +108,7 @@
                     android:layout_height="wrap_content"
                     android:text="Seguidores"
                     android:textColor="#33E1FF"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.1"
@@ -119,11 +126,12 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/user_following"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="15"
+                    android:text="0"
                     android:textColor="#33E1FF"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     tools:layout_editor_absoluteX="194dp"
                     tools:layout_editor_absoluteY="374dp" />
@@ -133,7 +141,7 @@
                     android:layout_height="wrap_content"
                     android:text="Seguidos"
                     android:textColor="#33E1FF"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -151,9 +159,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10"
+                    android:text="0"
                     android:textColor="#33E1FF"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     tools:layout_editor_absoluteX="323dp"
                     tools:layout_editor_absoluteY="374dp" />
@@ -164,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:text="Logros"
                     android:textColor="#33E1FF"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.876"
@@ -213,9 +221,10 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/user_weight"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="80,1 Kg"
+                            android:text="--"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp" />
 
@@ -236,9 +245,10 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/user_height"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="180 cm"
+                            android:text="--"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp" />
 
@@ -259,9 +269,10 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/user_last_measure_photo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="5 abr"
+                            android:text="--"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp" />
 
@@ -291,9 +302,10 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/user_last_measure"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="5 abr."
+                            android:text="--"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp" />
 
@@ -314,16 +326,19 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/user_rol"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Profesional"
+                            android:autoSizeTextType="uniform"
+                            android:text="--"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Perfil deportivo"
+                            android:autoSizeTextType="uniform"
+                            android:text="Perfil"
                             android:textColor="#AAA3A3"
                             android:textSize="18sp" />
 
@@ -339,7 +354,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="5 abr"
+                            android:text="--"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp" />
 
@@ -359,92 +374,96 @@
 
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/user_goals_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="15dp"
-            android:background="#ffffff"
-            app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="20dp"
-                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="OBJETIVO 1"
-                    android:textColor="#828282"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="En proceso de recuperar movilidad y estabilidad en la rodilla y volver a ponerme como un TORO"
-                    android:textColor="#828282"
-                    android:textSize="16sp" />
+        </androidx.recyclerview.widget.RecyclerView>
 
 
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
+            android:background="#222222"
+            android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:background="#ffffff"
-            app:cardCornerRadius="10dp"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2">
+            app:layout_constraintTop_toBottomOf="@+id/user_goals_recyclerView">
 
-            <LinearLayout
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Intereses"
+                android:textColor="#FFFFFF"
+                android:layout_marginTop="15sp"
+                android:layout_marginStart="15sp"
+                android:textSize="16sp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/user_tags_recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="20dp"
-                android:orientation="vertical">
+                android:layout_marginTop="15sp"
+                android:layout_marginStart="15sp"
+                android:layout_marginBottom="10dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/logoutCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="75dp"
+            android:layout_marginEnd="75dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="25dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
+            android:visibility="gone"
+            app:cardBackgroundColor="#FF3366"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="20dp"
+                app:cardBackgroundColor="#222222"
+                android:layout_margin="1dp">
+
+                <Button
+                    android:id="@+id/logoutButton"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="OBJETIVO 2"
-                    android:textColor="#828282"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:background="@android:color/transparent"
+                    android:text="CERRAR SESIÓN"
+                    android:letterSpacing="0.2"
+                    android:textSize="20sp"
+                    android:textStyle="normal"
+                    android:textColor="#FF3366"
+                    android:onClick="logout"
+                    android:layout_margin="10dp"
+                    android:drawableStart="@drawable/ic_exit"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="En proceso de recuperar movilidad y estabilidad en la rodilla y volver a ponerme como un TORO"
-                    android:textColor="#828282"
-                    android:textSize="16sp" />
-
-
-            </LinearLayout>
-
-
+            </androidx.cardview.widget.CardView>
         </androidx.cardview.widget.CardView>
+
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
