Registro y app icon

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
-        android:text="Hi there! Nice to see you again."
+        android:text="Hola! Es un placer verte de nuevo."
         android:textColor="@color/hiperlinkTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/emailTextInput"
@@ -90,7 +90,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="20dp"
-        android:hint="PASSWORD"
+        android:hint="CONTRASEÑA"
         android:textColorHint="@color/textColorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
         android:layout_height="47dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/roundedbutton"
-        android:text="SIGN IN"
+        android:text="INICIAR SESIÓN"
         android:onClick="loginButton"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -172,7 +172,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        android:text="Forgot Password?"
+        android:text="Has olvidado la contraseña?"
         android:textColor="@color/textColorSecondary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -185,7 +185,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        android:text="Sign Up"
+        android:text="Registrarse"
+        android:onClick="signUp"
         android:textColor="@color/textColorPrimary"
         android:textSize="16sp"
         android:textStyle="bold"
